--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -1,16 +1,25 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
-    <li class="d-flex p-2">
-        <h6 class="mr-4">{{ resource.uri }}:</h6>
-        <ul class="list-unstyled d-inline-flex">
-            {% for method in resource.methods %}
-                <li class="search-filter border-right px-3">
-                   <span class="pl-0 new badge badge-{{ method.type|lower }}" data-badge-caption="{{ method.type }}">
-                        {{ method.type }}
-                   </span>
-                </li>
-            {% endfor %}
-        </ul>
-    </li>
+    <div class="row pt-5 border-bottom">
+        <div class="col-12 d-inline-flex">
+            <h4 class="mr-4">{{ resource.uri }}:</h4>
+            <ul class="list-unstyled d-inline-flex">
+                {% for method in resource.methods %}
+                    <li class="search-filter border-right px-3">
+                       <span class="pl-0 new badge badge-{{ method.type|lower }}" data-badge-caption="{{ method.type }}">
+                            {{ method.type }}
+                       </span>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+    {% for method in resource.methods %}
+        <div class="row">
+            <div class="col-12">
+                {% include theme ~ "/resource.html.twig" %}
+            </div>
+        </div>
+    {% endfor %}
 {% endif %}
 
 {% for resource in resource.resources %}
