--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -5,10 +5,13 @@
         <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-        <link href="../fonts/MavenPro.css" rel="stylesheet">
+        <link href="../raml2html/themes/fonts/MavenPro.css" rel="stylesheet">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <title>{{ api.title }}</title>
         <style>
+            body {
+                font-family: "Maven Pro";
+            }
             .sidebar-menu, .search-input  {
                 background-color: #fcfcfc;
             }
@@ -16,9 +19,15 @@
                 /*font-size: 22px;*/
             }
             h3 {
-                font-size: 22px;
+                font-size: 26px;
             }
             h4 {
+                font-size: 22px;
+            }
+            h5 {
+                font-size: 20px;
+            }
+            h6 {
                 font-size: 18px;
             }
 
