--- a/raml2html/themes/default/named-parameter.html.twig
+++ b/raml2html/themes/default/named-parameter.html.twig
@@ -1,6 +1,8 @@
-<li>
-    <strong>{{ item.key }}</strong>:
-
+<tr>
+    <td>
+        {{ item.key }}
+    </td>
+    <td>
     {% set is_structured_value = not item.type is scalar type or not item.type == 'array' %}
 
     {% if not is_structured_value %}
@@ -19,7 +21,6 @@
             {% endif %}
         {% endif %}
         </span>
-
         {% if item.isRequired() %}&nbsp;<span class="blue-text">(required)</span>{% endif %}
 
         {% if item.canRepeat() %} repeat: {{ item.repeat }}{% endif %}
@@ -34,9 +35,10 @@
 
         {% if item.validationPattern %} | pattern: {{ item.validationPattern }}{% endif %}
     {% endif %}
-
+    </td>
+    <td>
     {% if item.description %}
-        <br />
         {{ item.description }}
     {% endif %}
-</li>
+    </td>
+</tr>
