--- a/raml2html/themes/default/resource-request-content.html.twig
+++ b/raml2html/themes/default/resource-request-content.html.twig
@@ -1,32 +1,8 @@
 <div id="{{ resource_unique_id }}_{{ method.type }}_request">
-    {% if method.headers %}
-        <ul class="collection with-header">
-            <li class="collection-header"><h5>Headers</h5></li>
-            <li class="collection-item">
-                <ul class="browser-default">
-                    {% for item in method.headers %}
-                        {% include theme ~ "/named-parameter.html.twig" %}
-                    {% endfor %}
-                </ul>
-            </li>
-        </ul>
-    {% endif %}
 
-    {% if method.queryParameters %}
-        <ul class="collection with-header">
-            <li class="collection-header"><h5>Query Parameters</h5></li>
-            <li class="collection-item">
-                <ul class="browser-default">
-                    {% for item in method.queryParameters %}
-                        {% include theme ~ "/named-parameter.html.twig" %}
-                    {% endfor %}
-                </ul>
-            </li>
-        </ul>
-    {% endif %}
 
     {% if method.bodies %}
-        <ul class="collection with-header">
+        <ul class="list-unstyled">
             <li class="collection-header"><h5>Body</h5></li>
             {% for key, body in method.bodies %}
                 <li class="collection-item">
