--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -30,7 +30,20 @@
             h6 {
                 font-size: 18px;
             }
-
+            table {
+                box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
+                max-width: 100%;
+                border-radius: .2rem;
+            }
+            table th {
+                background-color: rgba(0,0,0,.54);
+                color: #fff;
+                vertical-align: top;
+            }
+            table:not([class]) td {
+                border-top: .1rem solid rgba(0,0,0,.07);
+                vertical-align: top;
+            }
         </style>
     </head>
 <body>
@@ -89,11 +102,8 @@
                     {% for resource in api.resources %}
                         {% set resource_unique_id = uuid() %}
                         <section class="section">
-                            <h2 class="border-bottom pb-2">{{ resource.displayName|default(resource.uri) }}</h2>
+                            <h2 class="pb-2">{{ resource.displayName|default(resource.uri) }}</h2>
                             {% include theme ~ "/resource-group.html.twig" %}
-{#                            <ul class="list-unstyled">#}
-{#                                {% include theme ~ "/resource.html.twig" %}#}
-{#                            </ul>#}
                         </section>
                     {% endfor %}
 
