--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -1,6 +1,6 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
-    <div class="row pt-5 border-bottom">
-        <div class="col-12 d-inline-flex">
+    <div class="row border-bottom border-top pt-3">
+        <div class="col-12 d-inline-flex pl-4">
             <h4 class="mr-4">{{ resource.uri }}:</h4>
             <ul class="list-unstyled d-inline-flex">
                 {% for method in resource.methods %}
