--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -1,13 +1,15 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
     <div class="row border-bottom border-top pt-3">
-        <div class="col-12 d-inline-flex pl-4">
-            <h4 class="mr-4">{{ resource.uri }}:</h4>
+        <div class="col-12 d-flex flex-column pl-4">
+            <h4 class="heading text-gray mr-4">{{ resource.uri }}</h4>
             <ul class="list-unstyled d-inline-flex">
                 {% for method in resource.methods %}
-                    <li class="search-filter border-right px-3">
-                       <span class="pl-0 new badge badge-{{ method.type|lower }}" data-badge-caption="{{ method.type }}">
-                            {{ method.type }}
-                       </span>
+                    <li class="search-filter {{ loop.index > 1 ? 'px-3' : 'pr-3' }} ">
+                        <a href="#">
+                           <span class="pl-0 new badge badge--{{ method.type|lower }}" data-badge-caption="{{ method.type }}">
+                                {{ method.type }}
+                           </span>
+                        </a>
                     </li>
                 {% endfor %}
             </ul>
