--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -1,61 +1,66 @@
 <div id="{{ resource_unique_id }}_{{ method.type }}">
     <div class="row px-3 pb-3 border-top">
-        <div class="col-lg-4 py-5">
-            <h5>{{ method.displayName}}</h5>
-            <p>{{ method.type }}: {{ resource.uri }}</p>
+        <div class="col-lg-6 py-5">
+            <h5 id="{{ method.displayName|replace({' ': '_'})|lower }}"  class="heading text-gray">{{ method.displayName}}</h5>
+            <p><code>{{ method.type }}: {{ resource.uri }}</code></p>
             <p>{{ method.description }}</p>
             {% if method.headers %}
                 <div class="py-3">
-                    <h6>Header parameters</h6>
+                    <h6 class="heading text-gray">Header parameters</h6>
                     {% for item in method.headers %}
-                        <div class="table-responsive mb-2">
+                        <div class="mb-2">
                             <p><strong>{{ item.key }}</strong></p>
                             <p>{{ item.description }}</p>
-                            <table class="table">
-                                <thead>
-                                <tr>
-                                    <th scope="col">Property</th>
-                                    <th scope="col">Value</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% include theme ~ "/header-parameters.html.twig" %}
-                                </tbody>
-                            </table>
+                            <div class="table-responsive mb-2">
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col">Property</th>
+                                        <th scope="col">Value</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% include theme ~ "/header-parameters.html.twig" %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     {% endfor %}
                 </div>
             {% endif %}
             {% if method.queryParameters %}
-                <h6>Query parameters</h6>
-                <div class="table-responsive py-3">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th scope="col">Property</th>
-                            <th scope="col">Type</th>
-                            <th scope="col">Value</th>
-                        </tr>
-                        </thead>
-                        <tbody>
+                <div class="py-3">
+                    <h6 class="heading text-gray">Query parameters</h6>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col">Property</th>
+                                <th scope="col">Type</th>
+                                <th scope="col">Value</th>
+                            </tr>
+                            </thead>
+                            <tbody>
                             {% for item in method.queryParameters %}
                                 {% include theme ~ "/named-parameter.html.twig" %}
                             {% endfor %}
-                        </tbody>
-                    </table>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             {% endif %}
             {% if method.responses %}
-                <h6>Possible responses</h6>
-                <div class="table-responsive py-3">
-                    <table class="table">
-                        <thead>
+                <div class="py-3">
+                    <h6 class="heading text-gray">Possible responses</h6>
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
                             <tr>
                                 <th scope="col">Code</th>
                                 <th scope="col">Description</th>
                             </tr>
-                        </thead>
-                        <tbody>
+                            </thead>
+                            <tbody>
                             {% for response in method.responses %}
                                 <tr>
                                     <td>
@@ -69,12 +74,13 @@
                                     </td>
                                 </tr>
                             {% endfor %}
-                        </tbody>
-                    </table>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             {% endif %}
         </div>
-        <div class="col-lg-8 py-5 example">
+        <div class="col-lg-6 py-5 example">
             {% set has_request_tab = method.queryParameters or method.headers or method.bodies %}
             {% set has_respose_tab = method.responses is not empty %}
             {% set has_securedby_tab = method.securitySchemes is not empty %}
