--- a/raml2html/themes/default/sidebar-menu.html.twig
+++ b/raml2html/themes/default/sidebar-menu.html.twig
@@ -1,7 +1,7 @@
 {% if (resource.methods or (resource.description and resource.parentUrl)) %}
     {% for method in resource.methods %}
-        <li class="search-filter">
-            <a href="#{{ method.displayName|replace({'': '-'})|lower }}">
+        <li class="search-filter py-2">
+            <a href="#{{ method.displayName|replace({' ': '_'})|lower }}">
                 {{ method.displayName }}
             </a>
         </li>
