--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -2,7 +2,8 @@
     <div class="row px-3 pb-3 border-top">
         <div class="col-lg-6 py-5">
             <h5 id="{{ method.displayName|replace({' ': '_'})|lower }}"  class="heading text-gray">{{ method.displayName}}</h5>
-            <p><code>{{ method.type }}: {{ resource.uri }}</code></p>
+            <p><span class="badge badge--{{ method.type|lower }}">{{ method.type }}: {{ resource.uri }}</span></p>
+{#            <p><code>{{ method.type }}: {{ resource.uri }}</code></p>#}
             <p>{{ method.description }}</p>
             {% if method.headers %}
                 <div class="py-3">
