Change badge size

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -88,6 +88,9 @@
                 min-width: 85px;
                 color: #ffffff;
             }
+            .badge--sm {
+                min-width: auto;
+            }
             .badge i {
                 margin-right: 0.2rem;
                 font-size: 1rem;
