--- a/raml2html/themes/default/resource-endpoints.html.twig
+++ b/raml2html/themes/default/resource-endpoints.html.twig
@@ -5,7 +5,7 @@
             <ul class="list-unstyled d-inline-flex">
                 {% for method in resource.methods %}
                     <li class="search-filter {{ loop.index > 1 ? 'px-3' : 'pr-3' }} ">
-                        <a href="#">
+                        <a href="#{{ method.displayName|replace({' ': '_'})|lower }}">
                            <span class="pl-0 new badge badge--{{ method.type|lower }}" data-badge-caption="{{ method.type }}">
                                 {{ method.type }}
                            </span>
