--- a/raml2html/themes/default/resource.html.twig
+++ b/raml2html/themes/default/resource.html.twig
@@ -1,7 +1,7 @@
 <div id="{{ resource_unique_id }}_{{ method.type }}">
     <div class="row px-3 pb-3 border-top">
-        <div class="col-lg-6 py-5">
-            <h5 id="{{ method.displayName|replace({' ': '_'})|lower }}"  class="heading text-gray">{{ method.displayName}}</h5>
+        <div id="{{ method.displayName|replace({' ': '_'})|lower }}"  class="col-lg-6 py-5">
+            <h5 class="heading text-gray">{{ method.displayName}}</h5>
             <p><span class="badge badge--sm badge--{{ method.type|lower }}">{{ method.type }}</span> {{ resource.uri }}</p>
 {#            <p><code>{{ method.type }}: {{ resource.uri }}</code></p>#}
             <p>{{ method.description }}</p>
