Changes for logo in header

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -21,7 +21,7 @@
             height: 3rem;
         }
         .nav-brand {
-            display: flex;
+            margin-top: 5px;
         }
         .nav-brand img {
             width: 100%;
