Chages for eZ Personalization label

--- a/raml2html/themes/default/index.html.twig
+++ b/raml2html/themes/default/index.html.twig
@@ -25,7 +25,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                         <a class="dropdown-item" href="https://doc.ezplatform.com/">eZ Platform Developer Documentation</a>
                         <a class="dropdown-item" href="https://doc.ezplatform.com/projects/userguide">eZ Platform User Documentation</a>
-                        <a class="dropdown-item" href="https://doc.ezplatform.com/projects/ezpersonalization">Documentation | eZ Personalization Documentation</a>
+                        <a class="dropdown-item" href="https://doc.ezplatform.com/projects/ezpersonalization">eZ Personalization Documentation</a>
                     </div>
                 </div>
             </div>
